# PrismStraightflyGD

./: BUILD_INSTRUCTIONS.txt  BUILD_ON_WINDOWS.bat  CMakeLists.txt  mod.json
.github/workflows/: build.yml
src/: main.cpp
